[gd_scene load_steps=14 format=3 uid="uid://v2eouu05j3u2"]

[ext_resource type="Script" uid="uid://cy2khxhqjgfvp" path="res://Entities/Weapons/vacuum_gun.gd" id="1_46828"]
[ext_resource type="Texture2D" uid="uid://bjiqnfgk2gs1x" path="res://Assets/Textures/Explosions_Textures/Flare00.PNG" id="3_ppnff"]
[ext_resource type="AudioStream" uid="uid://bb72r7703nvus" path="res://Assets/SFX/beep.mp3" id="3_tt8ov"]

[sub_resource type="CylinderMesh" id="CylinderMesh_fkki6"]
top_radius = 0.1
bottom_radius = 0.1
height = 0.2

[sub_resource type="SphereShape3D" id="SphereShape3D_lrcjq"]
radius = 11.5

[sub_resource type="SphereShape3D" id="SphereShape3D_46828"]
radius = 0.9627943

[sub_resource type="Gradient" id="Gradient_ppnff"]
colors = PackedColorArray(0, 0, 0, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_46828"]
gradient = SubResource("Gradient_ppnff")

[sub_resource type="Curve" id="Curve_tt8ov"]
_data = [Vector2(0.016759783, 0), 0.0, 0.0, 0, 0, Vector2(0.54748607, 0.44943827), 0.0, 0.0, 0, 0, Vector2(0.8156425, 0), 0.0, 0.0, 0, 0, Vector2(0.99999, 0), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 5

[sub_resource type="CurveTexture" id="CurveTexture_fkki6"]
curve = SubResource("Curve_tt8ov")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_46828"]
emission_shape_scale = Vector3(3, 1, 1)
emission_shape = 3
emission_box_extents = Vector3(1, 1, 1)
gravity = Vector3(0, 0, 0)
scale_curve = SubResource("CurveTexture_fkki6")
color_ramp = SubResource("GradientTexture1D_46828")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_tt8ov"]
transparency = 1
shading_mode = 0
vertex_color_use_as_albedo = true
albedo_texture = ExtResource("3_ppnff")
billboard_mode = 3
billboard_keep_scale = true
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="QuadMesh" id="QuadMesh_fkki6"]
material = SubResource("StandardMaterial3D_tt8ov")

[node name="vacuum_gun" type="Node3D"]
transform = Transform3D(1, 0, 0, 0, -4.371139e-08, 1, 0, -1, -4.371139e-08, 0, 0, 0)
script = ExtResource("1_46828")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.1, 0)
mesh = SubResource("CylinderMesh_fkki6")

[node name="VacuumArea" type="Area3D" parent="."]
visible = false
collision_layer = 0
collision_mask = 64

[node name="CollisionShape3D" type="CollisionShape3D" parent="VacuumArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 11.883549, 2.42642e-07)
shape = SubResource("SphereShape3D_lrcjq")

[node name="CollectArea" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.27057946, 1.1827404e-08)
visible = false
collision_layer = 0
collision_mask = 64

[node name="CollisionShape3D" type="CollisionShape3D" parent="CollectArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.9294294, 4.0626652e-08)
shape = SubResource("SphereShape3D_46828")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_tt8ov")

[node name="GPUParticles3D" type="GPUParticles3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 6, 2.6226832e-07)
layers = 4
lifetime = 0.4
process_material = SubResource("ParticleProcessMaterial_46828")
draw_pass_1 = SubResource("QuadMesh_fkki6")

[node name="GPUParticlesAttractorSphere3D" type="GPUParticlesAttractorSphere3D" parent="GPUParticles3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -6, -2.6226826e-07)
strength = 128.0
cull_mask = 4294966276
radius = 19.0

[connection signal="area_entered" from="CollectArea" to="." method="_on_collect_area_area_entered"]
[connection signal="body_entered" from="CollectArea" to="." method="_on_collect_area_body_entered"]
